fix: adjust rotation position of covers

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ button:hover {
   z-index: 1;
 }
 
-.share,
+.main-git,
 .about-me {
   font-family: 'Abril Fatface', cursive;
   font-size: 14px;
